wal-macros/tests/html_macro_tests/literals/single_literal_fail.rs
use wal_macros::html;

fn main() {
    html! { b"val" };
}
